opencloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
spec:
  ports:
    - port: 9200
      targetPort: 9200
      name: http
  selector:
    app: opencloud
